fix: update main layout styles for improved alignment and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,17 @@ header > h1 {
 }
 
 main {
-  padding: 30px 60px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 30px 30px 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.explainer {
+  text-align: center;
+  max-width: 500px;
 }
 
 .add-ingredient-form {
